junit tests, ant tomcat-mak